# GigATax

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
backend/: .env.example  __init__.py  db.py  main.py  requirements.txt  schema.sql  startup_checks.py
backend/models/: expense.py
backend/routes/: email.py  expenses.py  export.py  plaid.py
backend/services/: ai_categorizer.py  email_parser.py  plaid_service.py  rules_engine.py
backend/src/ai/: categorizer.py
backend/src/routers/: access.py  dashboard.py  deps.py  filing.py  onboarding.py  optimization.py  plaid.py  receipts.py  users.py  waitlist.py
backend/src/schemas/: requests.py
backend/src/services/: demo_transactions.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AccessGuard.tsx
frontend/src/context/: OptimizationReviewContext.tsx
frontend/src/data/: mockData.ts
frontend/src/lib/: supabaseClient.ts
frontend/src/pages/: AuthCallbackPage.tsx  DashboardPage.tsx  FilingPrepPage.tsx  FinalReviewPage.tsx  LandingPage.tsx  OnboardingPage.tsx  OptimizationPage.tsx  ReceiptCapturePage.tsx  WaitlistAccessPage.tsx
frontend/src/services/: api.ts  mockApi.ts  supabaseClient.ts
frontend/src/types/: api.ts  domain.ts
frontend/src/utils/: optimizationSignals.ts  stateTaxContext.ts  taxMath.ts
scripts/: seed_demo_data.py  start_backend.py
(+12 files in other folders)
