[project]
name = "hackmsa-2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "google-generativeai>=0.8.6",
    "plaid-python>=16.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
]
